--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,6 @@
         </executions>
       </plugin>
     </plugins>
-    <finalName>Demo</finalName>
+    <finalName>demo</finalName>
   </build>
 </project>
